--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.14.0",
     "nodemon": "^3.1.10",
-    "react-router-dom": "^7.5.3"
+    "react-router-dom": "^7.5.3",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "concurrently": "^9.1.2"
